--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,12 +1,12 @@
 h1 a, h2 a {
-    color: #19dada;
+    color: #292218;
     font-family: 'Lobster';
 }
 body {
     padding-left: 14px;
 }
 .page-header {
-    background-color: #19dada;
+    background-color: #0e30a0;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
